# unifiedcatalogpy

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: api-client.instructions.md  python-code.instructions.md  test-files.instructions.md
.github/workflows/: publish.yml
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_retry.py
unifiedcatalogpy/: __init__.py  api_client.py  client.py  config.py  exceptions.py  models.py  response_models.py  retry.py  utils.py
